Correção link colab

--- a/ML_code_exercise.ipynb
+++ b/ML_code_exercise.ipynb
@@ -20,13 +20,22 @@
       "version": "3.8.5"
     },
     "colab": {
-      "name": "ML_code_exercise.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "include_colab_link": true
     },
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/VielF/CodeML/blob/main/ML_code_exercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -84,7 +93,7 @@
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +138,7 @@
         "  # GPU information\n",
         "  !nvidia-smi"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,7 +209,7 @@
         "id": "PwPIc6aBcj-o",
         "outputId": "b7bc5ce0-7a77-4a99-92e7-c94b36c000a5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +237,7 @@
       "source": [
         "table_data = pd.read_csv(\"data/coin_Bitcoin.csv\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -244,7 +253,7 @@
         "id": "jpXTKhgYdOOy",
         "outputId": "e5f9a2b9-43b1-41a2-a3af-021e3397de24"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -469,7 +478,7 @@
       "source": [
         "table_data['Date'] = pd.to_datetime(table_data['Date'])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -489,7 +498,7 @@
       "source": [
         "time_axis = table_data.set_index('Date')['Close']"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -514,7 +523,7 @@
       "source": [
         "time_axis['2017'].plot(style='o--');"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -551,7 +560,7 @@
       "source": [
         "type(time_axis.values)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,7 +639,7 @@
         "df_data_analysis = pd.read_csv('http://www.statlearning.com/s/Advertising.csv', index_col=0)\n",
         "df_data_analysis.head() "
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -826,7 +835,7 @@
         "newspaper_values = df_data_analysis['newspaper'].values\n",
         "sales_values = df_data_analysis['sales'].values"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -853,7 +862,7 @@
         "plt.legend(loc='upper right')\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -884,7 +893,7 @@
         "plt.legend(loc='upper right')\n",
         "plt.show()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -915,7 +924,7 @@
         "plt.legend(loc='upper right')\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -946,7 +955,7 @@
         "plt.legend(loc='upper right')\n",
         "plt.show()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -980,7 +989,7 @@
         "plt.legend(loc='upper right')\n",
         "plt.show()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1018,7 +1027,7 @@
       "source": [
         "df_data_analysis"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1245,7 +1254,7 @@
       "source": [
         "df_data_analysis.corr(method='spearman') #pearson kendall spearman"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1417,7 +1426,7 @@
         "plt.ylabel('Sales in %');\n",
         "plt.show()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1460,7 +1469,7 @@
         "plt.ylabel('Sales in %');\n",
         "plt.show()\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1494,7 +1503,7 @@
         "plt.ylabel('Sales in %');\n",
         "plt.show()\n"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1954,7 +1963,7 @@
         "    plt.plot(X[err,0], vert, 'ks', mfc='none', markersize=10)\n",
         "    return"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1993,7 +2002,7 @@
         "X_test, y_test = make_moons(n_samples=10000, noise=0.25)\n",
         "plot_data(X, y)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2049,7 +2058,7 @@
         "plot_boundary(model_log_regr_reg_4, X) #para plotar os dados\n",
         "plot_data(X, y)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2207,7 +2216,7 @@
         "        plt.plot(*S.T,'go',mfc='none',ms=12)\n",
         "    return"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2256,7 +2265,7 @@
         "X_test, y_test = make_moons(n_samples=10000, noise=0.25)\n",
         "plot_data(X_train, y_train)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2311,7 +2320,7 @@
         "    gs.fit(np.r_[X_train, X_val], np.r_[y_train, y_val])\n",
         "    return gs.best_params_"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2323,7 +2332,7 @@
         "#definimos um intervalo de valores a serem testados, buscando encontrar o melhor\n",
         "list_C = list_gamma =  np.linspace(0.001, 100,100)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2372,7 +2381,7 @@
       "metadata": {
         "id": "nxU5CoJSrf5M"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2399,7 +2408,7 @@
         "plot_data(X_train, y_train)\n",
         "plot_svm(model,X_train,heatmap=True, circles=True)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2506,7 +2515,7 @@
       "metadata": {
         "id": "UY_wNnBrs1Ra"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2530,7 +2539,7 @@
         "plot_data(X_train, y_train)\n",
         "plot_svm(model,X_train,heatmap=True, circles=True)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2626,7 +2635,7 @@
         "print(X_train.shape, y_train.shape)\n",
         "print(X_val.shape, y_val.shape)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2684,7 +2693,7 @@
         "print('Train accuracy: {:.1%}'.format(model.score(X_train, y_train)))\n",
         "print('  Val accuracy: {:.1%}'.format(model.score(X_val, y_val)))"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2740,7 +2749,7 @@
         "print('Train accuracy: {:.1%}'.format(model.score(X_train, y_train)))\n",
         "print('  Val accuracy: {:.1%}'.format(model.score(X_val, y_val)))"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2798,7 +2807,7 @@
         "print('Train accuracy: {:.1%}'.format(model.score(X_train, y_train)))\n",
         "print('  Val accuracy: {:.1%}'.format(model.score(X_val, y_val)))"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2895,7 +2904,7 @@
         "print(X_train.shape, y_train.shape)\n",
         "print(X_val.shape, y_val.shape)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2938,7 +2947,7 @@
         "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2953,7 +2962,7 @@
       "source": [
         "history = model.fit(X_train, y_train, epochs=100) #treinamento do modelo (pode demorar sem GPU)"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3186,7 +3195,7 @@
         "val_loss, val_acc = model.evaluate(X_val,  y_val, verbose=2)\n",
         "print('\\nTest accuracy:', val_acc)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3282,7 +3291,7 @@
         "print(x_train.shape, y_train.shape)\n",
         "print(x_test.shape, y_test.shape)"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3336,7 +3345,7 @@
         "print(\"Val shapes: \",x_val.shape)\n",
         "print(\"Test shapes: \",x_test.shape)"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3389,7 +3398,7 @@
         "    return model\n",
         "make_model().summary()"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3457,7 +3466,7 @@
         "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3472,7 +3481,7 @@
       "source": [
         "history = model.fit(x_train, y_train, epochs=20, batch_size=32, validation_data=(x_val, y_val)) # aqui botamos o modelo para treinar e validamos a qualidade ao mesmo tempo"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3625,9 +3634,7 @@
       "metadata": {
         "id": "cgyIi1-Bur1H"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
